--- a/src/app/au-tab-panel/au-tab-panel.component.html
+++ b/src/app/au-tab-panel/au-tab-panel.component.html
@@ -1,8 +1,10 @@
+<ul class="tab-panel-buttons" *ngIf="tabs">
+  <li
+    [ngClass]="{selected: tab.selected}"
+    (click)="selectTab(tab)"
+    *ngFor="let tab of tabs;">{{tab.title}}
+  </li>
+</ul>
 
-
-  <ul class="tab-panel-buttons" *ngIf="tabs">
-    <li *ngFor="let tab of tabs;">{{tab.title}}</li>
-  </ul>
-
-  <ng-content></ng-content>
+<ng-content></ng-content>
 
