--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,14 @@
 
 <div class="container">
 
-    <au-tab-panel>
+  <ng-template #headerButtons>
+    <button (click)="tabPanel.selectTab(loginTab)">Login</button>
+    <button (click)="tabPanel.selectTab(signUpTab)">Sign up</button>
+  </ng-template>
 
-      <au-tab title="login">
+    <au-tab-panel #tabPanel [headerTemplate]="headerButtons">
+
+      <au-tab title="login" #loginTab>
         <form>
           <div class="form-field">
             <label>Email:</label><input>
@@ -18,7 +23,7 @@
         </form>
       </au-tab>
 
-      <au-tab title="Sign up">
+      <au-tab title="Sign up" #signUpTab>
         <form>
           <div class="form-field">
             <label>Email:</label><input>
